// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders correctly 1`] = `
<div>
  <div
    class="Tabs Tabs--primary"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-1 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-2"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-4 PrivateTabIndicator-colorPrimary-5 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-8 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-9 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when one tab is false 1`] = `
<div>
  <div
    class="Tabs Tabs--primary"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-37 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-38"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-39 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-40 PrivateTabIndicator-colorPrimary-41 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-44 TabPanelBox"
      >
        Content One
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when visibleUntil is set to md  1`] = `
<div>
  <div
    class="Tabs Tabs--primary Tabs--visible-until-md"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-45 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-46"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-47 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-47"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-48 PrivateTabIndicator-colorPrimary-49 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-52 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-53 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when visibleUntil is set to sm  1`] = `
<div>
  <div
    class="Tabs Tabs--primary Tabs--visible-until-sm"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-54 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-55"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-56 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-56"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-57 PrivateTabIndicator-colorPrimary-58 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-61 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-62 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders secondary theme correctly 1`] = `
<div>
  <div
    class="Tabs Tabs--secondary"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-19 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-20"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-21 Mui-selected"
                  data-testid="tab-0"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-21"
                  data-testid="tab-1"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-22 PrivateTabIndicator-colorPrimary-23 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-0"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-26 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      data-testid="tabpanel-1"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-27 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component triggers onChange 1`] = `
Array [
  Array [
    "tabTwo",
  ],
]
`;
